--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project 3</title>
   <!-- External scripts and stylesheets -->
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   
   <!--
   <link rel="stylesheet" href=""/>
@@ -15,7 +17,19 @@
   <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
 <body>
-  <div></div>
+  <div class="main_container">
+    <div class="plots_container">
+      <div class="plot" id="plot1">
+
+      </div>
+      <div class="plot" id="plot2">
+        
+      </div>
+      <div class="plot" id="plot3">
+        
+      </div>
+    </div>
+  </div>
   
   <!-- Our JavaScript -->
   <script type="text/javascript" src="static/js/logic.js"></script>
