Add chart for status + change plot names + change some map colors

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
         </select>
 
         <div class="plots_container">
-            <div class="plot" id="plot1"></div>
-            <div class="plot" id="plot2"></div>
-            <div class="plot" id="plot3"></div>
+            <div class="plot" id="plotPowerLevels"></div>
+            <div class="plot" id="plotPie"></div>
+            <div class="plot" id="plotOperators"></div>
+            <div class="plot" id="plotStatus"></div>
         </div>
 
     </div>
