add status chart

--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project 3</title>
   <!-- External scripts and stylesheets -->
+
   
   <!--
   <link rel="stylesheet" href=""/>
   <script src=""></script>
   -->
+<script src="https://d3js.org/d3.v5.min.js"></script>
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
   <!-- Our CSS -->
   <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
 <body>
-  <div></div>
+  <div id="statusplot"></div>
   
   <!-- Our JavaScript -->
   <script type="text/javascript" src="static/js/logic.js"></script>
