--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
 </head>
 
 <body>
-  <header>EV Charging Stations in the US</header>
-  <div id="map"></div>
-
-  <hr>
-  <div id="selection_row">
-      <div id="selectTitle">Select a State to view details:</div>
-      <select id="selectState" onchange="optionChanged(this.value)">
-          <option value="USA">United States</option>
-      </select>
+  <div>
+    <header>EV Charging Stations in the US</header>
+    <div id="map"></div>
+    <hr>
+    <div id="selection_row">
+        <div id="selectTitle">Select a State to view details:</div>
+        <select id="selectState" onchange="optionChanged(this.value)">
+            <option value="USA">United States</option>
+        </select>
+    </div>
+    <div class="plot" id="powerLevelsPlot"></div>
+    <div class="plot" id="statusplot"></div>
+    <div class="plot" id="plotOperators"></div>
+    <footer>Data provided by: <a href="https://openchargemap.org/site">OpenChargeMap</a></footer>
   </div>
-
-  <div id="powerLevelsPlot"></div>
-  <div id="statusplot"></div>
-  <footer>Data provided by: <a href="https://openchargemap.org/site">OpenChargeMap</a></footer>
-
   <!-- Our JavaScript -->
   <script type="text/javascript" src="static/js/states.js"></script>
   <script type="text/javascript" src="static/js/logic.js"></script>
