--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
             <option value="USA">United States</option>
         </select>
     </div>
-    <div class="plot" id="powerLevelsPlot"></div>
-    <div class="plot" id="statusplot"></div>
-    <div class="plot" id="plotOperators"></div>
+    <div>
+      <div class="plot" id="powerLevelsPlot"></div>
+      <div class="plot" id="statusplot"></div>
+      <div class="plot" id="plotOperators"></div>
+    </div>
     <footer>Data provided by: <a href="https://openchargemap.org/site">OpenChargeMap</a></footer>
   </div>
   <!-- Our JavaScript -->
