--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Charging Stations in the US</title>
+  <link rel="icon" href="images/favicon.svg">
   
   <!-- External scripts and stylesheets -->
   <script src="https://d3js.org/d3.v5.min.js"></script>
